# hackathon-tv5

./: .gitignore  .hackathon.json  CLAUDE.md  DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  README.md  README_ENTERTAIN_AI.md  SUMMARY.txt  cloudbuild.yaml  netlify.toml  package-lock.json  render.yaml  vercel.json
api/: main.py
app/: .dockerignore  .gcloudignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
benchmarks/: run_benchmarks.sql  run_benchmarks_optimized.sql  run_tv5_benchmarks.sql  ruvector_benchmark.sql  ruvector_benchmark_optimized.sql  tv5_raft_scale_benchmark.sql
docs/: CONSTELLATION_SERVICES_UPDATE_SUMMARY.md  DEMO_QUICK_REFERENCE.md  DEMO_RECORDING_GUIDE.md  DEMO_VIDEO_SCRIPT.md  (+28 more)
exogenesis-omega/: .gitignore  Cargo.toml  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  WORKSPACE_SUMMARY.md  rustfmt.toml
exogenesis-omega/.backup/omega-brain/: Cargo.toml
exogenesis-omega/.backup/omega-brain/benches/: recommendation_latency.rs
exogenesis-omega/.backup/omega-brain/src/: config.rs  inference.rs  lib.rs  memory.rs  recommend.rs  vectors.rs
exogenesis-omega/.backup/omega-protocol/: Cargo.toml  build.rs
exogenesis-omega/.backup/omega-protocol/proto/: sync.proto
exogenesis-omega/.backup/omega-protocol/src/: compression.rs  events.rs  lib.rs  messages.rs  patterns.rs  recommendations.rs  sync.rs  types.rs
exogenesis-omega/.backup/omega-sdk/: Cargo.toml  README.md  build.rs
exogenesis-omega/.backup/omega-sdk/include/: omega_sdk.h
exogenesis-omega/.backup/omega-sdk/src/: builder.rs  error.rs  ffi.rs  lib.rs
exogenesis-omega/crates/omega-constellation/: Cargo.toml
exogenesis-omega/crates/omega-constellation/src/: error.rs  federation.rs  lib.rs  metrics.rs  shard.rs  storage.rs
exogenesis-omega/crates/omega-constellation/src/api/: grpc.rs  mod.rs  rest.rs
exogenesis-omega/crates/omega-tv-brain/: Cargo.toml  IMPLEMENTATION.md  README.md
exogenesis-omega/crates/omega-tv-brain/src/: config.rs  embed.rs  lib.rs  observe.rs  recommend.rs  sync.rs  types.rs
exogenesis-omega/crates/omega-tv-sdk/: Cargo.toml  IMPLEMENTATION.md  README.md  build.rs
exogenesis-omega/crates/omega-tv-sdk/examples/: async_usage.c  simple_usage.c
exogenesis-omega/crates/omega-tv-sdk/include/: omega_sdk.h
exogenesis-omega/crates/omega-tv-sdk/src/: error.rs  ffi.rs  lib.rs  runtime.rs
exogenesis-omega/crates/omega-tv-sync/: Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SUMMARY.txt
exogenesis-omega/crates/omega-tv-sync/src/: client.rs  compression.rs  lib.rs  protocol.rs  types.rs
exogenesis-omega/deploy/: DEPLOYMENT_SUMMARY.md  README.md
exogenesis-omega/deploy/docker/: Dockerfile.constellation  Dockerfile.constellation.simple  Dockerfile.federation  docker-compose.prod.yml  docker-compose.yml  haproxy.cfg  init-db.sql  prometheus.yml
exogenesis-omega/deploy/helm/omega-constellation/: Chart.yaml  values-prod.yaml  values.yaml
exogenesis-omega/deploy/helm/omega-constellation/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
exogenesis-omega/deploy/kubernetes/: configmap.yaml  constellation-deployment.yaml  constellation-service.yaml  federation-cronjob.yaml  hpa.yaml  namespace.yaml  pdb.yaml  ruvector-statefulset.yaml  secret.yaml
exogenesis-omega/proto/: omega.proto
exogenesis-omega/services/constellation-server/: Cargo.toml
exogenesis-omega/services/constellation-server/src/: config.rs  handlers.rs  health.rs  main.rs  shutdown.rs
exogenesis-omega/services/federation-worker/: Cargo.toml
exogenesis-omega/services/federation-worker/src/: config.rs  main.rs
exogenesis-omega/tests/e2b-integration/: TEST_RESULTS_REPORT.md  client-0.json  client-1.json  client-2.json  client-3.json  client-4.json  client-5.json  client-6.json  client-7.json  client-8.json  client-9.json  generate-mock-data.js  package-lock.json  package.json  run-e2b-tests.js  run-local-tests.js  test-data.json  test-results.json  tv-viewing-schema.json
exogenesis-omega/tools/omega-cli/: Cargo.toml
obsidian-rs/: Cargo.toml
obsidian-rs/crates/obsidian-core/: Cargo.toml
obsidian-rs/crates/obsidian-core/src/: error.rs  lib.rs  metadata.rs  note.rs  position.rs  vault.rs  workspace.rs
obsidian-rs/crates/obsidian-editor/: Cargo.toml
obsidian-rs/crates/obsidian-editor/src/: buffer.rs  cursor.rs  error.rs  history.rs  lib.rs  selection.rs
obsidian-rs/crates/obsidian-graph/: Cargo.toml
obsidian-rs/crates/obsidian-graph/src/: error.rs  graph.rs  lib.rs  link.rs  visualization.rs
obsidian-rs/crates/obsidian-markdown/: Cargo.toml
obsidian-rs/crates/obsidian-markdown/src/: embed.rs  frontmatter.rs  lib.rs  parser.rs  renderer.rs  tag.rs  wikilink.rs
obsidian-rs/crates/obsidian-plugins/: Cargo.toml
obsidian-rs/crates/obsidian-plugins/src/: api.rs  error.rs  events.rs  lib.rs  loader.rs  manifest.rs  registry.rs  settings.rs
obsidian-rs/crates/obsidian-search/: Cargo.toml
obsidian-rs/crates/obsidian-search/src/: error.rs  fulltext.rs  fuzzy.rs  lib.rs  semantic.rs
obsidian-rs/crates/obsidian-storage/: Cargo.toml
obsidian-rs/crates/obsidian-storage/src/: cache.rs  config.rs  database.rs  error.rs  lib.rs  vault.rs  watcher.rs
obsidian-rs/src-tauri/: Cargo.toml  tauri.conf.json
obsidian-rs/src-tauri/src/: main.rs  state.rs
obsidian-rs/src-tauri/src/commands/: graph.rs  markdown.rs  mod.rs  note.rs  plugin.rs  search.rs  settings.rs  vault.rs
obsidian-rs/src-tauri/ui/: index.html  package.json  vite.config.ts
obsidian-rs/src-tauri/ui/src/: App.tsx
obsidian-rs/src-tauri/ui/src/components/: EditorPane.css  EditorPane.tsx  GraphView.css  GraphView.tsx  MarkdownEditor.css  MarkdownEditor.tsx  MarkdownPreview.css  MarkdownPreview.tsx  SearchModal.css  SearchModal.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx
obsidian-rs/src-tauri/ui/src/hooks/: useKeyboardShortcuts.ts  useTauriCommands.ts
obsidian-rs/src-tauri/ui/src/stores/: appStore.ts
obsidian-rs/src-tauri/ui/src/styles/: app.css  global.css
(+390 files in other folders)
