[package]
name = "omega-tv-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Exogenesis Team"]
description = "C FFI SDK for TV manufacturers to integrate Omega Brain"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "omega_tv_sdk"

[dependencies]
omega-tv-brain = { path = "../omega-tv-brain" }
omega-tv-sync = { path = "../omega-tv-sync" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.19"
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
tempfile = "3.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
