[package]
name = "obsidian-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for ObsidianRS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
