[package]
name = "obsidian-editor"
version = "0.1.0"
edition = "2021"
description = "Text editor core for Obsidian-rs"
license = "MIT"

[dependencies]
obsidian-core = { path = "../obsidian-core" }
obsidian-markdown = { path = "../obsidian-markdown" }

# Text buffer
ropey = "1.6"

# Utilities
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.10"
