[package]
name = "obsidian-graph"
version = "0.1.0"
edition = "2021"
description = "Knowledge graph and backlinks for Obsidian-rs"
license = "MIT"

[dependencies]
obsidian-core = { path = "../obsidian-core" }

# Graph library
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
indexmap = { version = "2.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
