[package]
name = "obsidian-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Markdown parser with Obsidian syntax extensions"

[dependencies]
obsidian-core = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true }
