[package]
name = "obsidian-search"
version = "0.1.0"
edition = "2021"
description = "Full-text and semantic search for Obsidian-rs"
license = "MIT"

[dependencies]
obsidian-core = { path = "../obsidian-core" }
obsidian-markdown = { path = "../obsidian-markdown" }

# Full-text search
tantivy = "0.22"

# Vector search (ruvector ecosystem)
# Using simpler vector implementation since ruvector may not be published
ndarray = "0.15"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
