[package]
name = "obsidian-storage"
version = "0.1.0"
edition = "2021"
description = "File system storage and watching for Obsidian-rs"
license = "MIT"

[dependencies]
obsidian-core = { path = "../obsidian-core" }
obsidian-markdown = { path = "../obsidian-markdown" }

# File system
notify = { version = "6.1", features = ["serde"] }
walkdir = "2.4"
globset = "0.4"
ignore = "0.4"

# Database
redb = "2.1"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
